# msp430fr2476-hal

./: Cargo.toml
src/: capture.rs  clock.rs  gpio.rs  hw_traits.rs  lib.rs  pmm.rs  prelude.rs  pwm.rs  rtc.rs  serial.rs  timer.rs  util.rs  watchdogtimer.rs
src/hw_traits/: eusci.rs  gpio.rs  timera.rs
