[package]
name = "msp430fr2476-hal"
version = "0.1.0"
edition = "2021"
description = "Implementation of embedded-hal for MSP430FR2476 microcontroller "
license = "MIT OR Apache-2.0"
repository = "https://github.com/YuhanLiin/msp430fr2x5x-hal"
keywords = ["no-std", "msp430", "ti", "launchpad", "embedded-hal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
msp430 = "0.4.0"
nb = "0.1.3"
void = { version = "1.0.2", default-features = false }
# embedded-hal = { version = "1.0.0-alpha.9", features = ["unproven"] }
embedded-hal = { version = "0.2.7", features = ["unproven"] }

[dependencies.msp430fr2476]
path = "../msp430fr2476"
version = "0.1.1"
features = ["rt", "critical-section"]

[dev-dependencies]
panic-msp430 = "0.4.0"
panic-never = "0.1.0"
msp430-rt = "0.4.0"
critical-section = "1.0.0"
msp430 = { version = "0.4.0", features = ["critical-section-single-core"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"

[profile.dev]
opt-level = "s"
codegen-units = 1
debug = true

[profile.dev.package."*"]
opt-level = "z"
